# vleo-notebook

./: .gitignore  LICENSE  README.md
RR/: .gitignore
benchmark/: Makefile  benchaes.cpp  pi.c  prime_numpy.py  seive.c  seive.py  seive2.py  seive_p5.pl
bluecherry/: Bluecherry DVR » Version 2 beta signup information.html  bluecherry.list
checkanonftp/: ftp-anon.nse.0
cp2k/: H2_abinitio.inp  H_abinitio.inp  runme.sh
eventsinperl/: Employee.pm  Framework.pm  Person.pm  Scribble.pl  testEmployee.pl  testgoo.pl  testgoo1.pl
glibtest/: Makefile.am  README  build.sh  configure.ac  glib_hw.c  glib_string.c  glib_threads.c
html/: mbQZB4nz.css  minimal_html5.html  minimal_html5_css_test.html  minimal_http_get_request.sh  minimal_plus_html5.html  style.css
ignition_analyser/: spark_amplifier.odg
kernelTools/: calc_proc_buddyinfo.pl
labjack/: test_KeiserPMM.py
lisp/: nlisp.py
lmlaccounting/: 2010psb.xls  2010psbSORTED.csv  2010psb_gl.pl  2010psb_propertemplate.xls  2011psb_gl.sh  2012psb_gl.sh  AccountHistory_AB_C2.csv  AccountHistory_C3A.csv  Inventory2011end.ods  InventoryAtYearEnd.ods  PSB_20120101_20121231.csv  README  csv2sqlledger_gl.pl  descriptionToCorrAcct.pm  psbCsv2sqlledger201302_gl.pl  psbCsv2sqlledger_gl.pl  psbCsvToLMLCsv.pl  psbOcrToCSV.pl  psbreporttemplate.blk
lmleasypm/: lepm
lmltwgwconfig/: com2com_mac.txt
memoryspan/: README  memspantst.pl
microhowtos/: linphone_mingw_setup.txt  new_repo_under_gitosis.txt
minimal_autoconf/: Makefile.am  README  build.sh  cleanautoconf.sh  configure.ac  hw.c
minimal_autoconf/hwA/: Makefile.am  configure.ac  hwA
minimal_autoconf/hwA/m4/: README_m4.txt
minimal_autoconf/jupiter-libtool-ch6/: Makefile.am  README  configure.ac
minimal_autoconf/jupiter-libtool-ch6/include/: libjupiter1.h
minimal_autoconf/jupiter-libtool-ch6/libjup/: Makefile.am  jup_print.c
minimal_autoconf/jupiter-libtool-ch6/libjup1/: Makefile.am  jup_toupper.c
minimal_autoconf/jupiter-libtool-ch6/src/: Makefile.am
minimal_autoconf/jupiter-libtool-ch6/zog/: zog.txt
move_non_x86/: move_non_x86.sh
notes/: diff_gcc_g++_macros.txt  sysadm_notes.txt
pcap/: Makefile  input.pcap  output.pcap  pcap_io.h  test_pcap.c
pyengnotation/: pyengnotation.py
questions_telecomguard/: answers4TG.odt  questions_TG.odt
raidextfsutils/: copywbadblocks.c  findblock.c  raidextfsutils.c
rpmbuild/: .rpmmacros  clean.sh
shell_notes/: download_FC6  mount_umount_vmware_LV.sh  mount_vmdk.sh  restore_dump_over_ssh.sh  shell_exit_on_error.sh  shellshock.bash  splitPATH.sh
socket_client_server/: socket_client_example.c  socket_server_example.c
suppliers/: Untitled Diagram.drawio  cameras_cases.txt  sbdevops.drawio
templates/: shell_script_getopt.sh  template.pl  template.pm  template_args.pl
testAuthenSASLPerl/: sockaccept_digestmd5.pl  sockaccept_plain.pl  socksend_digestmd5.pl  socksend_plain.pl
testPyQT/: pyqtgraph_test1.py  qt5-button.py  setWindowIcon.py  setWindowIcon5.py  sliders.py  sliders.ui  testDrawImage.py  testDrawLine.py  testGraphicScene.py  testIcon.py  testMinQT5.py  testNewWindow.py  untitled.py  untitled.ui
test_CLion/src_test_cmake/: CMakeLists.txt
test_Mathematica/: Matrices.nb  Matrices0.nb
test_YAML/: anchor.yaml  swagger.json  swagger.yaml
test_asm/: Makefile  hellow_world  hellow_world.s
test_c_cxx/: errors.c  gcc.paths  gcc_patchs_search  hashincludes.txt  i686-pc-mingw32-gcc.defines  i686-pc-mingw32-gcc.paths  incr_void_ptr.c  minimal.c  noncontextfree.cc  postincr_vs_cast.c  puzzle1.c  quoteincludes.txt  repeat_char.c  repeat_char_better.c  test_bridge_pattern.cxx  test_builder_pattern.cxx  test_const.c  test_for.c  test_for.cxx  test_func_in_func.c  test_gdb.c  test_log.c  test_malloc.c  test_preproc__func__.c  test_pthreads.c  test_pure_virtual_implementation.cxx  test_quine.c  test_segfault.c  test_signals.cxx  test_singleton_pattern.cxx  test_sizeof.c  test_sse.c  test_strstr.c  test_typeid.cxx  test_union.c  test_uthash.c  test_uthash_objsize.c  test_uuid_mac.c  test_vectors.cxx  x.vala
test_crypto/: pubkey.rsa  rsa.pl  rsa_usage.sh  rsakg.c  seckey.rsa
test_cython/: Build_cyth_obj.sh  Makefile  atoi_test.py  pysetup.py  test_clibiface.pyx
test_dynlink/: Makefile  main.c  mylib.c  mylib.h  runme.sh
test_filenames_withCR/: test_argc_argv.c  test_nameswith_CR.sh  test_sh_param1.sh  x.cpio
test_gas/: hello_gas.c  hello_gas.s  t0.c
test_go/: hellow_world.go  sieve  simple_sieve.go
test_groovy/: GroovyTest.groovy  README  runGroovy.sh  sdkman.sh  tdsl.groovy
test_gtk+/: Makefile  helloworld.c
test_java/: CrazyJava.java  Hello.java  Hello0.java  Makefile  MessagesDAO.java
test_join/: b  b_
test_js/: arrow_function.js  class_with_arrow_method.js  test_class_this.js
test_kernelmodule/: Makefile  foo.c  reduceLinuxKernelToSingleArch.pl
test_libtoolize/: build.sh  foo.h
test_libxml2/: test_libxml2.c
test_m4/: hello_world.m4
test_make/: Makefile  Makefile1
test_ml/: Makefile  fact.sml
test_mysql/: database_Schema.sql
test_numpy/: complex_dtype.py  h5py_iter.py  h5py_test.py  numpy_rotation.py  numpy_types.txt  quant_mech.py  writehdf5_from_stackoverflow_com.py
test_objective_c/: Makefile  test1.m
test_openssl/: genca.sh  gencrt.sh
test_perl/: get_host_from_uri.pl  pass_hash_or_array.pl  perlIOClass.pl  perl_simple_class.pl  recursive_count.pl  recursive_count_obfuscated.pl  reverse_string.pl  testRuntimeBinding.pl  testTCP_Clnt.pl  testTCP_Srv.pl  test_array.pl  test_call_context.pl  test_hash_by_array.pl  test_module.pl  test_operators.pl  test_print_hash.pl  test_quine.pl  test_reverse.pl  test_state.pl  threads_Thread.pl
test_perl6/: hw.pl6  seive.pl  seive_p5.pl
test_php/: scope.php
test_python/: Main.py  ModelController.py  camView.py  hi_low_game.py  little_life.py  matplotlib_slider.py  mlog.py  python_c_analogy.c  setupcon.py  testGst.py  test_decorator_class_cash_method_to_attrib.py  test_decorator_func_noargs.py  test_enum.py  test_logging.py  test_setupcon.py  vplayer.py  weightedChoice.py
test_qt5/: build.sh  main.cpp  snake.cpp  snake.h
(+481 files in other folders)
